parksmap/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: parksmap
  name: parksmap
spec:
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: parksmap
